tests/fixtures/valid/delta.omts
{
  "omtsf_version": "0.1.0",
  "snapshot_date": "2026-02-22",
  "file_salt": "a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890",
  "update_type": "delta",
  "base_snapshot_ref": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  "nodes": [
    {
      "id": "org-add",
      "type": "organization",
      "name": "Added Corp",
      "_operation": "add"
    },
    {
      "id": "org-mod",
      "type": "organization",
      "name": "Modified Corp",
      "_operation": "modify"
    },
    {
      "id": "org-rm",
      "type": "organization",
      "name": "Removed Corp",
      "_operation": "remove"
    }
  ],
  "edges": [
    {
      "id": "e-1",
      "type": "supplies",
      "source": "org-add",
      "target": "org-mod",
      "properties": {
        "valid_from": "2025-01-01"
      },
      "_operation": "add"
    }
  ]
}
