tests/fixtures/invalid/missing-edge-id.omts
{
  "omts_version": "0.1.0",
  "snapshot_date": "2026-02-18",
  "file_salt": "a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890",
  "nodes": [
    {
      "id": "org-alpha",
      "type": "organization",
      "name": "Alpha Corp"
    },
    {
      "id": "org-beta",
      "type": "organization",
      "name": "Beta Corp"
    }
  ],
  "edges": [
    {
      "type": "supplies",
      "source": "org-alpha",
      "target": "org-beta",
      "properties": {
        "valid_from": "2024-01-01"
      }
    }
  ]
}
